--- a/style.css
+++ b/style.css
@@ -846,6 +846,13 @@ body {
     padding: var(--space-2xl) 0;
   }
   
+  .about__headshot {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  
   .hero__background {
     background-attachment: scroll;
   }
