--- a/style.css
+++ b/style.css
@@ -860,17 +860,21 @@ body {
   }
   
   .modal {
-    padding: var(--space-sm);
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    border: none;
+    border-radius: 0;
   }
   
   .modal__content {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 90vw;
-    max-width: 500px;
-    max-height: 85vh;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    box-shadow: none;
     overflow-y: auto;
   }
   
