--- a/style.css
+++ b/style.css
@@ -284,10 +284,20 @@ body {
   width: 100%;
   height: 100%;
   background: linear-gradient(135deg, var(--color-surface) 0%, var(--color-background) 100%);
-  background-image: url('https://picsum.photos/1920/1080?random=50');
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
+}
+
+.hero__background video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: 1;
 }
 
 .hero__background::after {
@@ -298,6 +308,7 @@ body {
   width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, 0.8);
+  z-index: 2;
 }
 
 
