--- a/style.css
+++ b/style.css
@@ -283,22 +283,17 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: linear-gradient(135deg, var(--color-surface) 0%, var(--color-background) 100%);
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed;
 }
 
 .hero__background video {
   position: absolute;
   top: 50%;
   left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   transform: translate(-50%, -50%);
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  z-index: -1;
+  z-index: 1;
 }
 
 
