--- a/style.css
+++ b/style.css
@@ -7,11 +7,11 @@
   --color-primary: #000000;
   --color-secondary: #333333;
   --color-tertiary: #666666;
-  --color-background: #f5f3ed;
-  --color-surface: #e8e6df;
+  --color-background: #ebe6d9;
+  --color-surface: #e0dbc9;
   --color-accent: #2d5016;
   --color-accent-hover: #1f3810;
-  --color-border: #d9d7d0;
+  --color-border: #d4cfc0;
   --color-text-light: #8e8e93;
   
   /* Typography */
