--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
 
 :root {
   /* Color palette */
-  --color-primary: #000000;
-  --color-secondary: #333333;
+  --color-primary: #2b2b2b;
+  --color-secondary: #4a4a4a;
   --color-tertiary: #666666;
   --color-background: #f5f3ed;
   --color-surface: #e8e6df;
